--- a/src/style.scss
+++ b/src/style.scss
@@ -1,1 +1,8 @@
+@import './sass/common/fonts.scss';
 @import './sass/common/common.scss';
+@import './sass/blocks/container.scss';
+@import './sass/blocks/header.scss';
+// @import './sass/blocks/intro.scss';
+@import './sass/blocks/video.scss';
+@import './sass/blocks/hero.scss';
+@import './sass/blocks/hero-list.scss';
