--- a/src/sass/blocks/header.scss
+++ b/src/sass/blocks/header.scss
@@ -1,9 +1,5 @@
 .header {
-    box-sizing: border-box;
-
-    &__wrapper {
-        position: relative;
-        max-height: 100vh;
-        overflow: hidden;
-    }
+  &__wrapper {
+    padding-top: 20px;
+  }
 }
