--- a/src/sass/common/common.scss
+++ b/src/sass/common/common.scss
@@ -1,3 +1,15 @@
+html {
+  box-sizing: border-box;
+  text-size-adjust: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 html,
 body {
   background-color: #ebebf1;
