--- a/src/sass/blocks/hero-list.scss
+++ b/src/sass/blocks/hero-list.scss
@@ -1,12 +1,26 @@
 .hero-list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 5px;
 
-    &__title {
-        font-size: 14px;
-        font-weight: 400;
-        line-height: calc(20/ 14);
-        margin: 0;
+  &__title {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: calc(20 / 14);
+    margin: 0;
+  }
+
+  &__item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 13px;
+
+    svg {
+      margin-right: 15px;
     }
+  }
 }
