--- a/src/sass/blocks/hero.scss
+++ b/src/sass/blocks/hero.scss
@@ -1,17 +1,26 @@
 .hero {
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
+  position: relative;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 10;
 
-    &__title {
-        color: #4a3e3e;
-        font-size: 30px;
-        font-style: italic;
-        font-weight: 800;
-        line-height: calc(40 / 30);
-        margin: 0;
-        margin-bottom: 10px;
-    }
+  &__wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 20px;
+  }
+
+  &__title {
+    color: #4a3e3e;
+    font-size: 45px;
+    font-style: italic;
+    font-weight: 800;
+    line-height: 1;
+    margin: 0;
+    margin-bottom: 10px;
+  }
 }
