--- a/src/sass/blocks/intro.scss
+++ b/src/sass/blocks/intro.scss
@@ -1,3 +1,25 @@
-// .intro {
+.intro {
+    position: relative;
+    height: 100vh;
+    width: 100%;
 
-// }
+    &__media {
+        position: absolute;
+        left: 0;
+        top: 0;
+        z-index: 1;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+    }
+
+    &__media-video {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        min-width: 100%;
+        min-height: 100%;
+        object-fit: cover;
+    }
+}
