--- a/src/style.scss
+++ b/src/style.scss
@@ -2,7 +2,10 @@
 @import './sass/common/common.scss';
 @import './sass/blocks/container.scss';
 @import './sass/blocks/header.scss';
-// @import './sass/blocks/intro.scss';
-@import './sass/blocks/video.scss';
+@import './sass/blocks/intro.scss';
 @import './sass/blocks/hero.scss';
 @import './sass/blocks/hero-list.scss';
+@import './sass/blocks/button.scss';
+@import './sass/blocks/ingredients.scss';
+@import './sass/blocks/ingredients-list.scss';
+@import './sass/blocks/col.scss';
