--- a/src/sass/blocks/button.scss
+++ b/src/sass/blocks/button.scss
@@ -11,7 +11,7 @@
     padding: 10px;
     text-align: center;
     min-width: 230px;
-    max-width: 100%;
+    max-width: 270px;
     overflow: hidden;
     width: 100%;
 
