--- a/src/sass/blocks/ingredients.scss
+++ b/src/sass/blocks/ingredients.scss
@@ -2,7 +2,14 @@
     background: linear-gradient(225deg, rgb(229, 216, 192) 10%, rgb(228, 238, 238) 69%);
    
     &__wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         padding-top: 20px;
         padding-bottom: 20px;
+    }
+
+    &__button {
+        margin-top: 20px;
     }
 }
