--- a/src/style.scss
+++ b/src/style.scss
@@ -9,6 +9,7 @@
 @import './sass/blocks/ingredients.scss';
 @import './sass/blocks/ingredients-list.scss';
 @import './sass/blocks/col.scss';
+@import './sass/blocks/reviews.scss';
 @import './sass/blocks/reviews-list.scss';
 @import './sass/blocks/slider.scss';
 @import './sass/blocks/promo.scss';
