--- a/src/sass/blocks/reviews-list.scss
+++ b/src/sass/blocks/reviews-list.scss
@@ -1,16 +1,42 @@
 .reviews-list {
-  max-width: 1000px;
+  max-width: 100%;
+  height: 280px;
   position: relative;
   margin: auto;
-  min-height: 300px;
-  display: flex;
+  min-height: 100%;
   overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+  &__wrapper {
+    display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 20px;
+
+  img {
+      border-radius: 40%;
+  }
+}
 
   &__item {
     animation-name: fade;
     animation-duration: 1.5s;
-    // width: 100%;
-    // height: 300px;
+    padding: 12px;
+    width: 100%;
+  }
+
+  &__name {
+      font-size: 14px;
+      margin-left: 30px;
+  }
+
+  &__text {
+      font-size: 15px;
+      line-height: calc(16/ 15);
+      margin: 0;
+      margin-top: 30px;
   }
 }
 
