--- a/src/sass/blocks/slider.scss
+++ b/src/sass/blocks/slider.scss
@@ -1,22 +1,25 @@
 .slider {
+    min-height: 30px;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+
   &__button {
     cursor: pointer;
-    position: absolute;
-    top: 50%;
     width: auto;
-    margin-top: -22px;
-    padding: 16px;
+    padding: 5px;
     color: white;
-    font-weight: bold;
-    font-size: 16px;
     transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    background-color: black;
+    border-radius: 3px;
+    background-color: #696565;
+  }
+
+  &__left {
+      left: 0;
   }
 
   &__right {
     right: 0;
-    border-radius: 3px 0 0 3px;
   }
 
   &__right:hover,
