--- a/src/style.scss
+++ b/src/style.scss
@@ -4,6 +4,7 @@
 @import './sass/blocks/header.scss';
 @import './sass/blocks/intro.scss';
 @import './sass/blocks/hero.scss';
+@import './sass/blocks/title.scss';
 @import './sass/blocks/hero-list.scss';
 @import './sass/blocks/button.scss';
 @import './sass/blocks/ingredients.scss';
@@ -15,3 +16,8 @@
 @import './sass/blocks/promo.scss';
 @import './sass/blocks/promo-description.scss';
 @import './sass/blocks/promo-list.scss';
+@import './sass/blocks/promo-list.scss';
+@import './sass/blocks/timer.scss';
+@import './sass/blocks/order.scss';
+@import './sass/blocks/order-price.scss';
+@import './sass/blocks/order-form.scss';
