--- a/src/sass/blocks/hero.scss
+++ b/src/sass/blocks/hero.scss
@@ -8,19 +8,13 @@
   z-index: 10;
 
   &__wrapper {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
   }
 
   &__title {
-    color: #4a3e3e;
-    font-size: 45px;
-    font-style: italic;
-    font-weight: 800;
-    line-height: 1;
-    margin: 0;
-    margin-bottom: 10px;
+    margin: 0 0 30px;
   }
 }
