--- a/src/sass/blocks/ingredients.scss
+++ b/src/sass/blocks/ingredients.scss
@@ -1,15 +1,28 @@
 .ingredients {
-    background: linear-gradient(225deg, rgb(229, 216, 192) 10%, rgb(228, 238, 238) 69%);
-   
-    &__wrapper {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding-top: 20px;
-        padding-bottom: 20px;
-    }
+  background: linear-gradient(
+    225deg,
+    rgb(229, 216, 192) 10%,
+    rgb(228, 238, 238) 69%
+  );
 
-    &__button {
-        margin-top: 20px;
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+
+    @media (min-width: 768px) {
+      padding-top: 60px;
+      padding-bottom: 60px;
     }
+  }
+
+  &__button {
+    margin-top: 30px;
+
+    @media (min-width: 768px) {
+      margin-top: 50px;
+    }
+  }
 }
