--- a/src/sass/blocks/promo.scss
+++ b/src/sass/blocks/promo.scss
@@ -6,12 +6,17 @@
   );
 
   &__wrapper {
-    @media (max-width: 768px) {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    @media (max-width: 800px) {
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding-top: 30px;
-      padding-bottom: 30px;
+    }
+
+    @media (min-width: 768px) {
+        padding-top: 60px;
+        padding-bottom: 60px;
     }
   }
 
