--- a/src/sass/blocks/reviews.scss
+++ b/src/sass/blocks/reviews.scss
@@ -2,5 +2,10 @@
   &__wrapper {
     padding-top: 30px;
     padding-bottom: 30px;
+
+    @media (min-width: 768px) {
+      padding-top: 60px;
+      padding-bottom: 60px;
+    }
   }
 }
