--- a/src/sass/blocks/ingredients-list.scss
+++ b/src/sass/blocks/ingredients-list.scss
@@ -27,6 +27,11 @@
            font-size: 18px;
            line-height: 1;
           }
+
+          @media (min-width: 1200px) {
+            font-size: 20px;
+            line-height: 1;
+           }
     }
 
     &__img {
