--- a/src/sass/blocks/order-price.scss
+++ b/src/sass/blocks/order-price.scss
@@ -29,6 +29,7 @@
     animation: show 2s 1;
     animation-fill-mode: forwards;
     animation-delay: 1s;
+    animation-iteration-count:infinite;
   }
 
   @keyframes show {
