--- a/src/sass/blocks/promo-description.scss
+++ b/src/sass/blocks/promo-description.scss
@@ -3,6 +3,10 @@
   flex-direction: column;
   align-items: center;
 
+  @media (min-width: 800px) {
+    width: 50%;
+  }
+
   &__title {
     color: #4a3e3e;
     font-size: 30px;
@@ -16,6 +20,11 @@
     font-size: 16px;
     line-height: 1;
     margin: 0;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+
+    @media (min-width: 768px) {
+        font-size: 18px;
+        line-height: 1;
+      }
   }
 }
