--- a/src/sass/blocks/promo.scss
+++ b/src/sass/blocks/promo.scss
@@ -8,15 +8,21 @@
   &__wrapper {
     padding-top: 30px;
     padding-bottom: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+
     @media (max-width: 800px) {
-      display: flex;
       flex-direction: column;
-      align-items: center;
     }
 
     @media (min-width: 768px) {
-        padding-top: 60px;
-        padding-bottom: 60px;
+      padding-top: 60px;
+      padding-bottom: 60px;
+    }
+
+    @media (min-width: 800px) {
+      gap: 40px;
     }
   }
 
@@ -25,6 +31,14 @@
   }
 
   &__button {
-    margin-top: 20px;
-  }
+    margin-top: 30px;
+
+    @media (min-width: 768px) {
+        margin-top: 50px;
+      }
+
+    @media (min-width: 800px) {
+      margin: auto;
+    }
+}
 }
