--- a/src/sass/blocks/reviews-list.scss
+++ b/src/sass/blocks/reviews-list.scss
@@ -13,7 +13,6 @@
     display: flex;
   flex-wrap: wrap;
   align-items: center;
-  gap: 20px;
 
   img {
       border-radius: 40%;
@@ -37,6 +36,11 @@
       line-height: calc(16/ 15);
       margin: 0;
       margin-top: 30px;
+      padding: 10px;
+
+      @media (min-width:768px) {
+          padding: 30px;
+      }
   }
 }
 
