--- a/src/sass/blocks/timer.scss
+++ b/src/sass/blocks/timer.scss
@@ -8,10 +8,10 @@
   height: 70px;
   width: 200px;
   position: relative;
-  
+
   &__counter {
     font-size: 25px;
     line-height: calc(30 / 25);
-    color: #494120;
+    color: #8f0622;
   }
 }
