--- a/src/sass/blocks/title.scss
+++ b/src/sass/blocks/title.scss
@@ -4,4 +4,9 @@
   font-style: italic;
   font-weight: 800;
   line-height: 1;
+
+  @media (min-width: 768px) {
+    font-size: 50px;
+    line-height: calc(60 / 50);
+  }
 }
