--- a/src/style.scss
+++ b/src/style.scss
@@ -19,5 +19,6 @@
 @import './sass/blocks/promo-list.scss';
 @import './sass/blocks/timer.scss';
 @import './sass/blocks/order.scss';
+@import './sass/blocks/order-row.scss';
 @import './sass/blocks/order-price.scss';
 @import './sass/blocks/order-form.scss';
