--- a/src/style.scss
+++ b/src/style.scss
@@ -20,5 +20,6 @@
 @import './sass/blocks/timer.scss';
 @import './sass/blocks/order.scss';
 @import './sass/blocks/order-row.scss';
+@import './sass/blocks/order-col.scss';
 @import './sass/blocks/order-price.scss';
 @import './sass/blocks/order-form.scss';
