--- a/src/sass/blocks/header.scss
+++ b/src/sass/blocks/header.scss
@@ -3,7 +3,7 @@
     padding-top: 30px;
     padding-bottom: 30px;
 
-    @media (min-widht: 768px) {
+    @media (min-width: 768px) {
       padding-top: 60px;
       padding-bottom: 60px;
     }
