--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,6 @@
 @import './sass/common/fonts.scss';
 @import './sass/common/common.scss';
+@import './sass/blocks/wrapper.scss';
 @import './sass/blocks/container.scss';
 @import './sass/blocks/header.scss';
 @import './sass/blocks/intro.scss';
