--- a/src/sass/blocks/order-form.scss
+++ b/src/sass/blocks/order-form.scss
@@ -12,7 +12,7 @@
     margin-bottom: 30px;
     position: relative;
 
-    &:last-child {
+    &:last-of-type {
       margin-bottom: 0;
     }
 
@@ -56,5 +56,9 @@
         -webkit-appearance: none;
       }
     }
+  }
+
+  &__button {
+    margin-top: 30px;
   }
 }
