--- a/src/sass/blocks/hero.scss
+++ b/src/sass/blocks/hero.scss
@@ -21,4 +21,13 @@
   &__button {
     margin-top: 30px;
   }
+
+  &__img {
+    img {
+      @media (min-width: 768px) {
+        width: 200px;
+        height: 300px;
+      }
+    }
+  }
 }
