--- a/src/sass/blocks/ingredients-list.scss
+++ b/src/sass/blocks/ingredients-list.scss
@@ -40,6 +40,12 @@
 
   &__img {
     margin: auto;
+
+    img {
+      @media (min-width: 768px) {
+        width: 300px;
+      }
+    }
   }
 
   &__button {
